# RISCV_simulator

./: CMakeLists.txt  Common.h  EX.h  ID.h  IF.h  Instruction.cpp  Instruction.h  MA.h  Memory.h  Predictor.h  RegisterFile.h  WB.h  main.cpp
